# frame_onboard

./: .gitignore  .gitmodules
install/: local_setup.sh  setup.sh
install/bno055/share/bno055/: package.sh
install/lightwarelidar2/lib/lightwarelidar2/: sf40c  sf45b
install/lightwarelidar2/share/ament_index/resource_index/parent_prefix_path/: lightwarelidar2
install/lightwarelidar2/share/lightwarelidar2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lightwarelidar2/share/lightwarelidar2/cmake/: lightwarelidar2Config.cmake
log/: latest_build
src/imu_pub/: CMakeLists.txt  package.xml
src/imu_pub/src/: imu_pub_node.cpp
src/imu_server/: package.xml  setup.cfg  setup.py
src/imu_server/imu_server/: imu_server_node.py
tools/: README.md  checktemp.sh
tools/imu_interpreter/: package.xml  setup.cfg  setup.py
tools/imu_interpreter/imu_interpreter/: imu_interpreter.py
