<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_pub</name>
  <version>0.0.1</version>
  <description>republish px4 orientation to std 9dof IMU msg</description>
  <maintainer email="cego6160@colorado.edu">ceu</maintainer>
  <license>NONE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
